chore: ignore build artifacts and local env

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-# Python / venv
-.venv/
+/.env
+/.env.*
+/dist/
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
-*.egg-info/
-
-# OS / editors
 .DS_Store
-Thumbs.db
 .vscode/
 .idea/
-
-# Generated artifacts
-*_present_mat.csv
-_uploaded_*.json
-.streamlit/secrets.toml
+.pytest_cache/
+/node_modules/
+.coverage
