--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-/.env
-/.env.*
-/dist/
+.venv/
+.streamlit/
 __pycache__/
 *.pyc
+/dist/
 .DS_Store
-.vscode/
 .idea/
+.vscode/
 .pytest_cache/
-/node_modules/
-.coverage
